--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://ashutoshmishra8796:ashu123@cluster0.wtq54tg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 BASE_URL=http://localhost:5000/api/
+PORT=5000
